# arai

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  cliff.toml  docker-compose.yml  glama.json  install.sh  pr-grok-tui-update.md  release-plz.toml  taniwha.yaml
.claude/: settings.json
.claude/agents/: taniwha-composition.md  taniwha-contract-derivation.md  taniwha-design-doc.md  taniwha-leaf-implementation.md  taniwha-orchestrator.md  taniwha-verifier.md
.claude/skills/_shared/: kupu-phases.md
.claude/skills/composition/: SKILL.md
.claude/skills/contract-derivation/: SKILL.md
.claude/skills/design-doc/: SKILL.md
.claude/skills/dispatcher/: SKILL.md
.claude/skills/leaf-implementation/: SKILL.md
.claude/skills/orchestrator/: SKILL.md
.claude/skills/verifier/: SKILL.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
.grok/hooks/: arai.json
.taniwha/: project.yaml
.taniwha/kupu/brief/: meta.yaml  v1.md  v4.md  v5.md  v6.md  v8.md
.taniwha/kupu/decisions/: 01KR7XHTYA0XPZ19KYJ6QCDCA5.md  01KR7XHWK7XNBRFQG49GD213Y0.md  01KR7YXD4TFWQPM5NEWFXK3WJ2.md  (+27 more)
bench/: README.md  hot_path.sh  nomatch_path.sh  skip_path.sh
demos/: block-demo.sh  block.cast
docs/: README.md  arai-compliance-features.docx  audit-ship.md  audit.md  design-http-hooks-kete-integration.md  enforcement.md  enrichment.md  extends.md  mcp.md  repo-layer-scope.md  rule-testing.md  rules-file-spec.md  telemetry-payload.md  voice.md
npm/: .gitignore  install.js  package.json
scenarios/: alembic-migration.json
site/: index.html  install  site.webmanifest
src/: audit.rs  canonicalize.rs  code_scanner.rs  compliance.rs  config.rs  discovery.rs  enrich.rs  extends.rs  guardrails.rs  hooks.rs  init.rs  intent.rs  legacy_path_migration.rs  lib.rs  main.rs  mcp.rs  migrate.rs  parser.rs  prompt_collector.rs  scenarios.rs  session.rs  ship.rs  stats.rs  store.rs  style.rs  sync.rs  telemetry.rs  upgrade.rs
tasks/: cursor-pairing.md  todo.md
tests/: brand_palette_verifier.rs  canonicalize_integration.rs  compliance_correlation.rs  extends_integration.rs  gateway_glyphs_verifier.rs  gateway_outcome_glyphs.rs  hooks_grok_exit_verifier.rs  hooks_safety.rs  intent_severity.rs  mcp_check_action.rs  parser_coverage.rs  prompt_collector_integration.rs  prompt_collector_verifier.rs  style_integration.rs  sync_integration.rs  verifier_base_directory_resolution.rs  verifier_extends_slice.rs  verifier_legacy_path_migration.rs
tests/parser_coverage/: corpus.md
(+336 files in other folders)
